Week 5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-tracker-service
  labels:
    app: course-tracker
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: course-tracker
